--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -27,6 +27,29 @@ http {
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
 
+	server {
+
+	  listen 80;
+
+	  location ^~ /uploads/ {
+
+	    root /home/marspais/web/uploads;
+
+	  }
+
+	  location ~* ^.+\.\w+$ {
+
+	    root /home/marspais/web/public;
+
+	  }
+
+	  location / {
+
+	    return 403;
+
+	  }
+
+	}
 	##
 	# SSL Settings
 	##
